@@ -39,30 +39,9 @@ class tx_directmail_scheduler extends tx_scheduler_Task {
 	 * @return	void
 	 */
 	function execute() {
-			// Check if cronjob is already running:
-		$lockfile = PATH_site . 'typo3temp/tx_directmail_cron.lock';
-		if (@file_exists($lockfile)) {
-				// If the lock is not older than 1 day, something is wrong
-			if (filemtime($lockfile) > (time() - (60*60*24))) {
-				$GLOBALS['BE_USER']->writelog(4, 0, 1,
-					'tx_directmail',
-					'TYPO3 Direct Mail Cron: Aborting, another process is already running!',
-					array()
-				);
-				return FALSE;
-			} else {
-				$GLOBALS['BE_USER']->writelog(4, 0, 0,
-					'tx_directmail',
-					'TYPO3 Direct Mail Cron: A .lock file was found but it is older than 1 day! Processing mails ...',
-					array()
-				);
-			}
-		}
-		touch($lockfile);
 		$htmlmail = t3lib_div::makeInstance('dmailer');
 		$htmlmail->start();
 		$htmlmail->runcron();
-		unlink($lockfile);
 		return TRUE;
 	}
 
